# Painting-Application

./: .gitignore  CMakeLists.txt  Files.cpp  LICENSE  Main.cpp  Makefile  Makefile_windows  README  Shader.cpp  Timer.cpp  Window.cpp  buildandrun.sh  easytab.h  hwcaps.cpp  png.cpp  webp.cpp  windowsbuild.bat
canvas/: ArrayTexture.cpp  Brush.cpp  Canvas.cpp  CanvasDraw.cpp  CanvasSetup.cpp  CanvasState.h  Framebuffer.cpp  ImageBlock.cpp  UniformData.h
docs/optimisations/: bool_hasStrokeData.txt  dirty_flag.txt  dirty_region.txt  solid_colour_image.txt
include/: ArrayTexture.h  Brush.h  Canvas.h  Files.h  Font.h  FrameBuffer.h  ImageBlock.h  ImageFile.h  Layer.h  MainWindow.h  Shader.h  Timer.h  UI.h  Window.h  hwcaps.h
include/glad/: glad.h
lib/: glad.c
res/: brush.vert  brush_circle.frag  brush_noise.frag  brush_rectangle.frag  brush_texture.frag  canvas_gen.frag  canvas_gen.vert  simple_texture.frag  simple_texture.vert  stroke_merge.frag  stroke_merge.vert  ui.frag  ui.vert
ui/: Button.cpp  Font.cpp  Label.cpp  MainWindow.cpp  Menu.cpp  UI.cpp  Widgets.cpp
